# Cockpit

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  SPEC.md  rust-toolchain.toml  start.sh
.claude/agents/: architect.md  coder.md  reviewer.md  tester.md
.github/workflows/: ci.yml
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  app.css  diff-parser.test.ts  diff-parser.ts  main.tsx  store.test.ts  store.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  streaming.rs
app/src-tauri/src/commands/: mod.rs  shell.rs
app/src/bindings/: AgentMode.ts  AgentPermissionMode.ts  AgentPrompts.ts  AgentRun.ts  Anchor.ts  Artifact.ts  BatchApproveConfig.ts  BatchStatus.ts  BatchVerdict.ts  CiCheck.ts  CiSummary.ts  CommandRun.ts  Comment.ts  CommentId.ts  CommentOrigin.ts  Config.ts  ConversationItem.ts  ConversationKind.ts  DiffData.ts  DiffSide.ts  DiffSignals.ts  DispatchSnapshot.ts  Event.ts  EvidenceSummary.ts  FilePair.ts  FindingSeverity.ts  GateState.ts  IssueRef.ts  KickoffResult.ts  LspServers.ts  MergeMethod.ts  MirrorResult.ts  PlanDoc.ts  PlanStep.ts  PrRef.ts  Project.ts  ProjectId.ts  ProjectPlan.ts  ProjectRef.ts  ProjectSource.ts  (+17 more)
app/src/components/: AddressedRequests.tsx  AgentEditor.tsx  AgentPanel.test.tsx  AgentPanel.tsx  BatchApprovePanel.tsx  CiPanel.test.tsx  CiPanel.tsx  CommandPalette.tsx  ConversationBand.test.tsx  ConversationBand.tsx  DiffView.tsx  EmptyState.tsx  EvidenceStrip.test.tsx  EvidenceStrip.tsx  FastLaneShelf.tsx  FindingsPanel.test.tsx  FindingsPanel.tsx  GatePill.test.tsx  GatePill.tsx  IntentPanel.tsx  KickoffView.tsx  Logo.tsx  NewProjectView.tsx  PermissionBanner.test.tsx  PermissionBanner.tsx  PlanView.tsx  ProjectCard.tsx  ReviewCard.test.tsx  ReviewCard.tsx  ReviewWorkspace.tsx  SettingsView.test.tsx  SettingsView.tsx  Sidebar.tsx  SkeletonCard.tsx  SkillsView.tsx  StackContainer.test.tsx  StackContainer.tsx  StackView.tsx  StateFilter.test.tsx  StateFilter.tsx  (+2 more)
app/src/hooks/: useKeyboardShortcuts.ts
app/src/lib/: agent-event.test.ts  agent-event.ts  attention.test.ts  attention.ts  card-signal.test.ts  card-signal.ts  ci.test.ts  ci.ts  diff-signals.test.ts  diff-signals.ts  lsp-client.ts  monaco-themes.ts  open.ts  relative-time.ts  request-pairing.test.ts  request-pairing.ts  shortcuts.test.tsx  shortcuts.tsx  stack-tree.test.ts  stack-tree.ts
app/src/test/: fixtures.ts  setup.ts  tauri-mock.ts
cockpit-docs/: CLAUDE.md  DOGFOODING.md  PROGRAM_PLAN.md  RESEARCH_INTERACTION_PATTERNS.md  RESEARCH_REVIEW_BOTTLENECK.md  ROADMAP.md  SPEC.md  gated-trait.md
crates/cockpit-cli/: Cargo.toml
crates/cockpit-cli/src/: main.rs
crates/cockpit-core/: Cargo.toml
crates/cockpit-core/src/: batch.rs  config.rs  dag.rs  diff_signals.rs  findings.rs  gate.rs  hook_server.rs  kickoff.rs  lib.rs  model.rs  persist.rs  plan_parser.rs  prompt.rs  restack.rs  skills.rs  store.rs  trajectory.rs  workflow.rs
crates/cockpit-core/src/adapters/: agent.rs  agent_stream.rs  git.rs  github.rs  linear.rs  lsp.rs  mod.rs
crates/cockpit-core/tests/: batch_fan_out_e2e.rs  e2e_round_trip.rs  fix_loop_e2e.rs
crates/cockpit-core/tests/golden/: plan_generation.txt  plan_generation_with_output.txt  review_prompt.txt  rework_ci_failures.txt  rework_custom_preamble.txt  rework_diff_gate.txt  rework_no_comments.txt  rework_plan_gate.txt  rework_with_skills.txt
