[workspace]
resolver = "2"
members = ["crates/cockpit-core", "crates/cockpit-cli", "app/src-tauri"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
git2 = "0.21"
tempfile = "3"
sha2 = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower = "0.5"
http = "1"
tauri = "2"
tauri-build = "2"
ts-rs = { version = "10", features = ["serde-compat"] }
