[package]
name = "cockpit-app"
version = "0.0.0"
edition.workspace = true

[dependencies]
tauri.workspace = true
cockpit-core = { path = "../../crates/cockpit-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
uuid.workspace = true
reqwest.workspace = true
git2.workspace = true
tauri-plugin-dialog = "2.7.1"

[build-dependencies]
tauri-build.workspace = true
