[package]
name = "cockpit-app"
version = "0.0.0"
edition.workspace = true

[dependencies]
tauri.workspace = true
cockpit-core = { path = "../../crates/cockpit-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
uuid.workspace = true
reqwest.workspace = true
git2.workspace = true
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
portable-pty = "0.9"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[build-dependencies]
tauri-build.workspace = true
