[package]
name = "cockpit-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cockpit"
path = "src/main.rs"

[dependencies]
cockpit-core = { path = "../cockpit-core" }
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
