[package]
name = "cockpit-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
git2.workspace = true
sha2.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
axum.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
http.workspace = true
