[package]
name = "cockpit-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
git2.workspace = true
sha2.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
axum = { workspace = true, features = ["ws"] }
ts-rs.workspace = true
toml = "1.1.2"
dirs = "6.0.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
base64 = "0.22"

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
http.workspace = true
reqwest = { workspace = true }
tokio = { workspace = true, features = ["net"] }
temp-env = { version = "0.3.6", features = ["async_closure"] }
tokio-tungstenite = "0.24"
